"all dataset works"

--- a/WebAppProject/WebAppProject/WebAppProject.csproj
+++ b/WebAppProject/WebAppProject/WebAppProject.csproj
@@ -67,10 +67,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\Database1.mdf" />
-    <Content Include="App_Data\Database1_log.ldf">
-      <DependentUpon>Database1.mdf</DependentUpon>
-    </Content>
+    <Content Include="App_Data\ProjectDatabase.mdf" />
+    <Content Include="App_Data\ProjectDatabase_log.ldf" />
     <Content Include="Web.config" />
     <Content Include="WebService1.asmx" />
   </ItemGroup>
